SF-575 Fix clipping of unread badge (#322)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-questions/checking-questions.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-questions/checking-questions.component.scss
@@ -18,7 +18,7 @@
     .question-title {
       display: flex;
       align-items: center;
-      width: 100%;
+      overflow: hidden;
 
       .material-icons {
         margin-right: 5px;
@@ -74,7 +74,7 @@
 
       span {
         position: absolute;
-        top: -7px;
+        top: -5px;
         left: -7px;
         background-color: $questionAnswerBubbleBackgroundColor;
         color: $questionAnswerBubbleColor;
